# slide-renderer

./: .env.example  .gitignore  LICENSE  Makefile  README.ko.md  README.md  custom-style.css  pyproject.toml  pytest.ini
examples/: basic_usage.py  llm_integration.py  paper_to_presentation.py
notebook/: json2md.ipynb
reference_slides/: README.md  _frontmatter.md  a-title-slide.md  b-section-title.md  c-single-content-with-image.md  d-highlight.md  e-two-column-list.md  f-vertical-list.md  g-horizontal-3-column-list.md  h-two-columns-with-2x2-grid.md  i-horizontal-4-column-list.md  j-image-with-description---2-images-text.md  k-image-with-description---3-images-text.md  l-3-column-metrics.md  m-metrics-grid.md  n-quote.md
sample_data/: README.md  all_schemas.json  sample_slides.json
sample_data/schemas/: highlight.json  horizontal_3_column_list.json  horizontal_4_column_list.json  image_with_description_2.json  image_with_description_3.json  metrics_grid.json  quote.json  section_title.json  single_content_with_image.json  three_column_metrics.json  title_slide.json  two_column_list.json  two_columns_with_grid.json  vertical_list.json
sample_data/usecase/: README.md
sample_data/usecase/paper/: attention_is_all_you_need.json
scripts/: render_sample.py
src/paper_to_presentation/: README.md  __init__.py  converter.py  generator.py  models.py  planning.py  renderer.py  utils.py
src/paper_to_presentation/schemas/: highlight.json  horizontal_3_column_list.json  horizontal_4_column_list.json  image_with_description_2.json  image_with_description_3.json  metrics_grid.json  quote.json  (+7 more)
src/slide_renderer/: __init__.py  llm_output.py  renderer.py  types.py
templates/: highlight.jinja2  horizontal_3_column_list.jinja2  horizontal_4_column_list.jinja2  image_with_description_2.jinja2  image_with_description_3.jinja2  metrics_grid.jinja2  quote.jinja2  section_title.jinja2  single_content_with_image.jinja2  three_column_metrics.jinja2  title_slide.jinja2  two_column_list.jinja2  two_columns_with_grid.jinja2  vertical_list.jinja2
tests/: test_renderer.py
(+2 files in other folders)
